--- a/.github/workflows/python-action.yml
+++ b/.github/workflows/python-action.yml
@@ -5,7 +5,7 @@ on: [push]
 jobs:
   build:
     name: Test And Create Report Artifact
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     strategy:
       matrix:
         python-version: ["3.6.15"]
