--- a/.github/workflows/python-action.yml
+++ b/.github/workflows/python-action.yml
@@ -40,21 +40,21 @@ jobs:
           path: ${{ matrix.python-version }}/*
         # Use always() to always run this step to publish test results when there are test failures
         if: ${{ always() }}
-#  docker:
-#    name: Publish - Docker Hub
-#    runs-on: ubuntu-latest
-#    needs: [build]
-#    env:
-#      REPO: ${{ secrets.DOCKER_REPO }}
-#    steps:
-#      - uses: actions/checkout@v1
-#      - name: Login to Docker Hub
-#        run: docker login -u ${{ secrets.DOCKER_USER }}
-#             -p ${{ secrets.DOCKER_PASS }}
-#      - name: Build Docker image
-#        run: docker build -t $REPO:latest -t $REPO:${GITHUB_SHA::8} .
-#      - name: Publish Docker image
-#        run: docker push $REPO
+  docker:
+    name: Publish - Docker Hub
+    runs-on: ubuntu-latest
+    needs: [build]
+    env:
+      REPO: ${{ secrets.DOCKER_REPO }}
+    steps:
+      - uses: actions/checkout@v1
+      - name: Login to Docker Hub
+        run: docker login -u ${{ secrets.DOCKER_USER }}
+             -p ${{ secrets.DOCKER_PASS }}
+      - name: Build Docker image
+        run: docker build -t $REPO:latest -t $REPO:${GITHUB_SHA::8} .
+      - name: Publish Docker image
+        run: docker push $REPO
 #  redeploy:
 #    name: Redeploy webhook call
 #    runs-on: ubuntu-latest
